# mz2000emulator

./: .gitignore  CMakeLists.txt  README.md
mz2000emulator/: CMakeLists.txt  mz2000emulator.c  mzkeymap.h  mzmisc.h  mzrom_dummy.h  mzrom_prebuild.h  rgb.pio  vga16_graphics.c
prebuild/: mz2000emulator.uf2
